--- a/ensenanza.html
+++ b/ensenanza.html
@@ -51,9 +51,9 @@ and open the template in the editor.
                    <!-- Inicia menu-->
                    <div class="collapse navbar-collapse" id="navegacion-gm">
                        <ul class="nav navbar-nav">
-                           <li class="active"><a href="index.php">Inicio</a></li>
-                           <li><a href="NuestroInstituto.php">Nuestro Instituto</a></li>
-                           <li><a href="ensenanza.php">Enseñanza</a></li>
+                           <li class="active"><a href="index.html">Inicio</a></li>
+                           <li><a href="NuestroInstituto.html">Nuestro Instituto</a></li>
+                           <li><a href="ensenanza.html">Enseñanza</a></li>
                            <li><a href="#">Novedades</a></li>
                            <li><a href="#">Inscripciones</a></li>
                        </ul>
