--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ La siguiente linea agrega una imagen fija en lugar del slide
                     <img src="pictures/JARDIN.jpg" width="228" height="206" alt="Jardin de Infantes"/ class="img-responsive img-rounded">
                      <div class=""> </div>  
                      <p>   
-                         <a href="ensenanza.php#jardin"><h3> Jardin de Infantes</h3></a>
+                         <a href="ensenanza.html#jardin"><h3> Jardin de Infantes</h3></a>
                        El jardín de infantes es un territorio que abre espacio a lo público, a los recién llegados al mundo, que inicia a la puesta en juego del derecho al bien social que significa la educaión, entendida como la distribución de la herencia del conjunto de saberes y oportunidades simultánea de conocimiento de lo nuevo.
                        <br>
                       
@@ -92,7 +92,7 @@ La siguiente linea agrega una imagen fija en lugar del slide
                      <img src="pictures/PRIMARIA.jpg" width="228" height="206" alt="Nivel Primario"/ class="img-responsive img-rounded">
                     <div class=""> </div>  
                     <p>
-                        <a href="ensenanza.php#primaria">  <h3> Nivel Primario</h3>
+                        <a href="ensenanza.html#primaria">  <h3> Nivel Primario</h3>
                         </a>
                         Uno de los ejes del Proyecto Institucional se vincula fuertemente con la premisa de que todos nuestros alumnos pueden aprender, por la tanto se asiste a una propuesta de enseñanza personalizada.
                         <br>
@@ -103,7 +103,7 @@ La siguiente linea agrega una imagen fija en lugar del slide
                      <img src="pictures/SECUNDARIA.jpg" width="228" height="206" alt="Nivel Secundario"/ class="img-responsive img-rounded">
                      <div class=""> </div>  
                      <p>
-                         <a href="ensenanza.php#secundario"> <h3> Nivel Secundario</h3></a>
+                         <a href="ensenanza.html#secundario"> <h3> Nivel Secundario</h3></a>
                         El objetivo es consolidar lo adquirido durante la escuela primaria e iniciar a los alumnos en las disciplinas y los métodos de la enseñanza secundaria. El programa ademas ofrece al alumno la posibilidad de personalizar sus estudios al presentarle seis áreas académicas, dentro de las cuales se deben elegir seis asignaturas para cursar durante los dos últimos años de su bachillerato.
                         <br>
                         
@@ -114,7 +114,7 @@ La siguiente linea agrega una imagen fija en lugar del slide
                     <img src="pictures/DEPORTES.jpg" width="228" height="206" alt="Escuela Deportiva"/ class="img-responsive img-rounded">
                     <div class=""> </div>  
                     <p>
-                        <a href="ensenanza.php#escuelaDeportiva">  <h3> Escuela Deportiva</h3></a>
+                        <a href="ensenanza.html#escuelaDeportiva">  <h3> Escuela Deportiva</h3></a>
                         Las practica deportiva beneficia notablemente la salud fisica y emocional de las personas. Promover el deporte, los habitos saludables son uno de los ejes de nuestra escuela deportiva.
                         <br>
                     </p>
